# calhacks

./: .gitignore  README.md
services/app_worker/: .gitignore  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
services/app_worker/.nuxt/: imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  tsconfig.json
services/app_worker/.nuxt/dev/: index.mjs  index.mjs.map
services/app_worker/.nuxt/manifest/: latest.json
services/app_worker/.nuxt/manifest/meta/: dev.json
services/app_worker/.nuxt/types/: imports.d.ts
services/app_worker/src-tauri/: Cargo.toml  tauri.conf.json
services/app_worker/src-tauri/capabilities/: default.json
services/app_worker/src-tauri/src/: lib.rs
services/app_worker/tauri-plugin-swift/: Cargo.toml  README.md  build.rs  package.json
services/app_worker/tauri-plugin-swift/guest-js/: index.ts
services/app_worker/tauri-plugin-swift/ios/: Package.swift
services/app_worker/tauri-plugin-swift/ios/Sources/: ExamplePlugin.swift
services/app_worker/tauri-plugin-swift/permissions/: ping.toml
services/app_worker/tauri-plugin-swift/permissions/autogenerated/: reference.md
services/app_worker/tauri-plugin-swift/permissions/autogenerated/commands/: get_gpu.toml  graphics.toml
services/app_worker/tauri-plugin-swift/permissions/schemas/: schema.json
services/app_worker/tauri-plugin-swift/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
services/app_worker/utils/: disk.js  invokeHardware.js  invokeSwift.js  runModel.js
services/core/: .env  .gitignore  README.md  TODO.md  alembic.ini  docker-compose.yaml  pyproject.toml
services/core/alembic/: env.py
services/core/alembic/versions/: 9a40baa82186_creating_task_table.py  c9db92499346_adding_optional_subtask_count_to_task_.py  f40bcf984fe2_creating_subtask_table.py
services/core/database/: schemas.py
services/core/server/: database.py  main.py  mq.py  schemas.py  utils.py
services/core/src/core/: result_aggregation.py  schemas.py  server.py  task_split.py  utils.py
services/core/utils/: timer.py
services/core/worker/: README.md  result_aggregation.py  task_split.py  utils.py
services/web_client/: app.vue  package-lock.json
services/worker/: .env  README.md  docker-compose.yaml  main.py  pyproject.toml
workers/: .gitignore  dummy.py  shard.py  shardpb.py  shardsync.py  testmodel.py  testmodel2.py  worker1.py
workers/saved_model/: fingerprint.pb  saved_model.pb
workers/saved_model/variables/: variables.index
