[project]
name = "calhacks_core"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ayaviri", email = "joshuayaviri@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.9.2",
    "dotenv-cli>=3.4.1",
    "python-multipart>=0.0.12",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
server = "dotenv uvicorn server.main:app --reload"
