[project]
name = "calhacks_core"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ayaviri", email = "joshuayaviri@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.9.2",
    "python-multipart>=0.0.12",
    "psycopg2>=2.9.10",
    "alembic>=1.13.3",
    "pika>=1.3.2",
    "dotenv-cli>=3.4.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
server.cmd = "uvicorn server.main:app --reload"
server.env_file = ".env"
worker.cmd = "worker/task_split.py"
worker.env_file = ".env"
migrate.cmd = "alembic upgrade head"
migrate.env_file = ".env"
