[project]
name = "calhacks_core"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ayaviri", email = "joshuayaviri@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.9.2",
    "python-multipart>=0.0.12",
    "psycopg2>=2.9.10",
    "alembic>=1.13.3",
    "pika>=1.3.2",
    "dotenv-cli>=3.4.1",
    "requests>=2.32.3",
    "redis>=5.1.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
# server = { cmd = "uvicorn core.server:app --reload", env = {"PYTHONPATH" = "src"}, script = "dotenv"}
server.cmd = "uvicorn core.server:app --reload"
server.env_file = ".env"
task_split_worker.cmd = "src/core/task_split.py"
task_split_worker.env_file = ".env"
result_aggregation_worker.cmd = "src/core/task_split.py"
result_aggregation_worker.env_file = ".env"
migrate.cmd = "alembic upgrade head"
migrate.env_file = ".env"

# [tool.pdm.scripts.dotenv]
# cmd = "python -c 'from dotenv import load_dotenv; load_dotenv()'"
