[project]
name = "worker"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ayaviri", email = "joshuayaviri@gmail.com"},
]
dependencies = [
    "pika>=1.3.2",
    "numpy>=1.26.4",
    "requests>=2.32.3",
    "tensorflow~=2.7",
]
requires-python = ">=3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
